# coursework_4

./: .gitignore  README.md  main.py  pyproject.toml
data/: example.json
src/: parser.py  saver.py  utils.py  vacancy.py
